{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 364,
  "lineage": "612f1913-32ab-dce1-4fe5-2761be68ef4b",
  "resources": [
    {
      "module": "module.wandb_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/prometheus",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus",
                "namespace": "default",
                "resource_version": "283682",
                "uid": "5c8a1a32-52e4-4549-90c6-50a5b4656e25"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.73.147",
                "cluster_ips": [
                  "172.20.73.147"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "prometheus",
                    "node_port": 0,
                    "port": 8181,
                    "protocol": "TCP",
                    "target_port": "8181"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wandb"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.app_cluster",
            "data.aws_eks_cluster_auth.app_cluster",
            "module.wandb_infra.aws_autoscaling_attachment.autoscaling_attachment",
            "module.wandb_infra.data.aws_s3_bucket.file_storage",
            "module.wandb_infra.data.aws_sqs_queue.file_storage",
            "module.wandb_infra.module.acm.aws_acm_certificate.this",
            "module.wandb_infra.module.acm.aws_acm_certificate_validation.this",
            "module.wandb_infra.module.acm.aws_route53_record.validation",
            "module.wandb_infra.module.app_eks.aws_eks_addon.eks",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_IMDSv2",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_cloudwatch",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_kms",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_s3",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_sqs",
            "module.wandb_infra.module.app_eks.aws_iam_role.node",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.ec2_container_registry",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.eks_cni",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.eks_worker_node",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_IMDSv2",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_cloudwatch",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_kms",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_s3",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_sqs",
            "module.wandb_infra.module.app_eks.aws_security_group.primary_workers",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.database",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.elasticache",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.lb",
            "module.wandb_infra.module.app_eks.data.aws_caller_identity.current",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_IMDSv2",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_assume",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_cloudwatch",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_kms",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_s3",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_sqs",
            "module.wandb_infra.module.app_eks.module.eks.aws_autoscaling_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_cloudwatch_log_group.this",
            "module.wandb_infra.module.app_eks.module.eks.aws_eks_cluster.this",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_instance_profile.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_policy.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.wandb_infra.module.app_eks.module.eks.aws_launch_configuration.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_launch_template.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_ami.eks_worker",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_ami.eks_worker_windows",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_caller_identity.current",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_partition.current",
            "module.wandb_infra.module.app_eks.module.eks.data.http.wait_for_cluster",
            "module.wandb_infra.module.app_eks.module.eks.kubernetes_config_map.aws_auth",
            "module.wandb_infra.module.app_eks.module.eks.local_file.kubeconfig",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_eks_fargate_profile.this",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_partition.current",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.aws_launch_template.workers",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.wandb_infra.module.app_lb.aws_lb.alb",
            "module.wandb_infra.module.app_lb.aws_lb_listener.http",
            "module.wandb_infra.module.app_lb.aws_lb_listener.https",
            "module.wandb_infra.module.app_lb.aws_lb_target_group.app",
            "module.wandb_infra.module.app_lb.aws_route53_record.alb",
            "module.wandb_infra.module.app_lb.aws_route53_record.extra",
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.app_lb.aws_security_group.outbound",
            "module.wandb_infra.module.database.aws_db_parameter_group.default",
            "module.wandb_infra.module.database.aws_rds_cluster_parameter_group.default",
            "module.wandb_infra.module.database.module.aurora.aws_appautoscaling_policy.this",
            "module.wandb_infra.module.database.module.aurora.aws_appautoscaling_target.this",
            "module.wandb_infra.module.database.module.aurora.aws_cloudwatch_log_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_db_parameter_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_db_subnet_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_iam_role.rds_enhanced_monitoring",
            "module.wandb_infra.module.database.module.aurora.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_endpoint.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_instance.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_parameter_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_role_association.this",
            "module.wandb_infra.module.database.module.aurora.aws_security_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.cidr_ingress",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.default_ingress",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.egress",
            "module.wandb_infra.module.database.module.aurora.data.aws_iam_policy_document.monitoring_rds_assume_role",
            "module.wandb_infra.module.database.module.aurora.data.aws_partition.current",
            "module.wandb_infra.module.database.module.aurora.random_id.snapshot_identifier",
            "module.wandb_infra.module.database.module.aurora.random_password.master_password",
            "module.wandb_infra.module.database.random_string.master_password",
            "module.wandb_infra.module.file_storage.aws_s3_bucket.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_acl.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_cors_configuration.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_notification.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_ownership_controls.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_public_access_block.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_server_side_encryption_configuration.file_storage",
            "module.wandb_infra.module.file_storage.aws_sqs_queue.file_storage",
            "module.wandb_infra.module.file_storage.aws_sqs_queue_policy.file_storage",
            "module.wandb_infra.module.file_storage.random_pet.file_storage",
            "module.wandb_infra.module.kms.aws_kms_alias.key",
            "module.wandb_infra.module.kms.aws_kms_grant.main",
            "module.wandb_infra.module.kms.aws_kms_key.key",
            "module.wandb_infra.module.kms.data.aws_caller_identity.current",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.wandb_infra.module.networking.module.vpc.aws_customer_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.wandb_infra.module.networking.module.vpc.aws_default_network_acl.this",
            "module.wandb_infra.module.networking.module.vpc.aws_default_route_table.default",
            "module.wandb_infra.module.networking.module.vpc.aws_default_security_group.this",
            "module.wandb_infra.module.networking.module.vpc.aws_default_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_flow_log.this",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_nat_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.database",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.private",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.public",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.public",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.private",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.public",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.database",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.wandb_infra.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.wandb_infra.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.redis.aws_elasticache_replication_group.default",
            "module.wandb_infra.module.redis.aws_security_group.redis",
            "module.wandb_infra.module.redis.aws_security_group_rule.egress",
            "module.wandb_infra.module.redis.aws_security_group_rule.ingress"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_app",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wandb",
            "metadata": [
              {
                "generation": 0,
                "name": "wandb",
                "namespace": "default",
                "resource_version": "283681",
                "uid": "f1ed8eef-e393-4ed6-9e12-1b5d1b3dddb7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.186.59",
                "cluster_ips": [
                  "172.20.186.59"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32543,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wandb"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.app_cluster",
            "data.aws_eks_cluster_auth.app_cluster",
            "module.wandb_infra.aws_autoscaling_attachment.autoscaling_attachment",
            "module.wandb_infra.data.aws_s3_bucket.file_storage",
            "module.wandb_infra.data.aws_sqs_queue.file_storage",
            "module.wandb_infra.module.acm.aws_acm_certificate.this",
            "module.wandb_infra.module.acm.aws_acm_certificate_validation.this",
            "module.wandb_infra.module.acm.aws_route53_record.validation",
            "module.wandb_infra.module.app_eks.aws_eks_addon.eks",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_IMDSv2",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_cloudwatch",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_kms",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_s3",
            "module.wandb_infra.module.app_eks.aws_iam_policy.node_sqs",
            "module.wandb_infra.module.app_eks.aws_iam_role.node",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.ebs_csi",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.ec2_container_registry",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.eks_cni",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.eks_worker_node",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_IMDSv2",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_cloudwatch",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_kms",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_s3",
            "module.wandb_infra.module.app_eks.aws_iam_role_policy_attachment.node_sqs",
            "module.wandb_infra.module.app_eks.aws_security_group.primary_workers",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.database",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.elasticache",
            "module.wandb_infra.module.app_eks.aws_security_group_rule.lb",
            "module.wandb_infra.module.app_eks.data.aws_caller_identity.current",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_IMDSv2",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_assume",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_cloudwatch",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_kms",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_s3",
            "module.wandb_infra.module.app_eks.data.aws_iam_policy_document.node_sqs",
            "module.wandb_infra.module.app_eks.module.eks.aws_autoscaling_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_cloudwatch_log_group.this",
            "module.wandb_infra.module.app_eks.module.eks.aws_eks_cluster.this",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_instance_profile.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_policy.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.wandb_infra.module.app_eks.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.wandb_infra.module.app_eks.module.eks.aws_launch_configuration.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_launch_template.workers_launch_template",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_ami.eks_worker",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_ami.eks_worker_windows",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_caller_identity.current",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_deny_log_group",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.wandb_infra.module.app_eks.module.eks.data.aws_partition.current",
            "module.wandb_infra.module.app_eks.module.eks.data.http.wait_for_cluster",
            "module.wandb_infra.module.app_eks.module.eks.kubernetes_config_map.aws_auth",
            "module.wandb_infra.module.app_eks.module.eks.local_file.kubeconfig",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_eks_fargate_profile.this",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.wandb_infra.module.app_eks.module.eks.module.fargate.data.aws_partition.current",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.aws_launch_template.workers",
            "module.wandb_infra.module.app_eks.module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.wandb_infra.module.app_lb.aws_lb.alb",
            "module.wandb_infra.module.app_lb.aws_lb_listener.http",
            "module.wandb_infra.module.app_lb.aws_lb_listener.https",
            "module.wandb_infra.module.app_lb.aws_lb_target_group.app",
            "module.wandb_infra.module.app_lb.aws_route53_record.alb",
            "module.wandb_infra.module.app_lb.aws_route53_record.extra",
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.app_lb.aws_security_group.outbound",
            "module.wandb_infra.module.database.aws_db_parameter_group.default",
            "module.wandb_infra.module.database.aws_rds_cluster_parameter_group.default",
            "module.wandb_infra.module.database.module.aurora.aws_appautoscaling_policy.this",
            "module.wandb_infra.module.database.module.aurora.aws_appautoscaling_target.this",
            "module.wandb_infra.module.database.module.aurora.aws_cloudwatch_log_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_db_parameter_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_db_subnet_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_iam_role.rds_enhanced_monitoring",
            "module.wandb_infra.module.database.module.aurora.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_endpoint.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_instance.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_parameter_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_rds_cluster_role_association.this",
            "module.wandb_infra.module.database.module.aurora.aws_security_group.this",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.cidr_ingress",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.default_ingress",
            "module.wandb_infra.module.database.module.aurora.aws_security_group_rule.egress",
            "module.wandb_infra.module.database.module.aurora.data.aws_iam_policy_document.monitoring_rds_assume_role",
            "module.wandb_infra.module.database.module.aurora.data.aws_partition.current",
            "module.wandb_infra.module.database.module.aurora.random_id.snapshot_identifier",
            "module.wandb_infra.module.database.module.aurora.random_password.master_password",
            "module.wandb_infra.module.database.random_string.master_password",
            "module.wandb_infra.module.file_storage.aws_s3_bucket.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_acl.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_cors_configuration.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_notification.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_ownership_controls.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_public_access_block.file_storage",
            "module.wandb_infra.module.file_storage.aws_s3_bucket_server_side_encryption_configuration.file_storage",
            "module.wandb_infra.module.file_storage.aws_sqs_queue.file_storage",
            "module.wandb_infra.module.file_storage.aws_sqs_queue_policy.file_storage",
            "module.wandb_infra.module.file_storage.random_pet.file_storage",
            "module.wandb_infra.module.kms.aws_kms_alias.key",
            "module.wandb_infra.module.kms.aws_kms_grant.main",
            "module.wandb_infra.module.kms.aws_kms_key.key",
            "module.wandb_infra.module.kms.data.aws_caller_identity.current",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.wandb_infra.module.networking.module.vpc.aws_customer_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.wandb_infra.module.networking.module.vpc.aws_default_network_acl.this",
            "module.wandb_infra.module.networking.module.vpc.aws_default_route_table.default",
            "module.wandb_infra.module.networking.module.vpc.aws_default_security_group.this",
            "module.wandb_infra.module.networking.module.vpc.aws_default_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_flow_log.this",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_nat_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.database",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.private",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.public",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.wandb_infra.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.wandb_infra.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.wandb_infra.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.wandb_infra.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.public",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.private",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.public",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.database",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.outpost",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.redshift",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.wandb_infra.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.wandb_infra.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.wandb_infra.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.wandb_infra.module.redis.aws_elasticache_replication_group.default",
            "module.wandb_infra.module.redis.aws_security_group.redis",
            "module.wandb_infra.module.redis.aws_security_group_rule.egress",
            "module.wandb_infra.module.redis.aws_security_group_rule.ingress"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-0f135f7cc62eec2ce",
            "description": "EKS primary workers security group.",
            "egress": [],
            "id": "sg-0f135f7cc62eec2ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow container NodePort service to receive load balancer traffic.",
                "from_port": 32543,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc7bb590407faacd"
                ],
                "self": false,
                "to_port": 32543
              }
            ],
            "name": "wnb-tf-primary-workers",
            "name_prefix": "",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from EKS workers to database",
            "from_port": 3306,
            "id": "sgrule-1616105107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cf4c02a41879792",
            "security_group_rule_id": "sgr-0ca947fe7de51feff",
            "self": false,
            "source_security_group_id": "sg-0f135f7cc62eec2ce",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.aws_security_group.primary_workers",
            "module.wandb_infra.module.database.module.aurora.aws_security_group.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from EKS workers to elasticache",
            "from_port": 6379,
            "id": "sgrule-1500767833",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a52288cc5a749f4f",
            "security_group_rule_id": "sgr-0e8a1ca1d4a3faba1",
            "self": false,
            "source_security_group_id": "sg-0f135f7cc62eec2ce",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.aws_security_group.primary_workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.redis.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow container NodePort service to receive load balancer traffic.",
            "from_port": 32543,
            "id": "sgrule-3627692825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f135f7cc62eec2ce",
            "security_group_rule_id": "sgr-0f26e6e212377a427",
            "self": false,
            "source_security_group_id": "sg-0bc7bb590407faacd",
            "timeouts": null,
            "to_port": 32543,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.aws_security_group.primary_workers",
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-020b8e2564196924f",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020b8e2564196924f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b8fb04beeac7ae4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wnb-tf20250131024205645700000011",
            "name_prefix": "wnb-tf",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-wandb",
              "GithubRepo": "wandb",
              "Name": "wnb-tf-eks_cluster_sg",
              "TerraformModule": "terraform-aws-wandb/module/app_eks",
              "TerraformNamespace": "wnb-tf"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "terraform-aws-wandb",
              "GithubRepo": "wandb",
              "Name": "wnb-tf-eks_cluster_sg",
              "TerraformModule": "terraform-aws-wandb/module/app_eks",
              "TerraformNamespace": "wnb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-04b8fb04beeac7ae4",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b8fb04beeac7ae4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020b8e2564196924f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020b8e2564196924f"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "wnb-tf20250131024205978500000012",
            "name_prefix": "wnb-tf",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-wandb",
              "GithubRepo": "wandb",
              "Name": "wnb-tf-eks_worker_sg",
              "TerraformModule": "terraform-aws-wandb/module/app_eks",
              "TerraformNamespace": "wnb-tf",
              "kubernetes.io/cluster/wnb-tf": "owned"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "terraform-aws-wandb",
              "GithubRepo": "wandb",
              "Name": "wnb-tf-eks_worker_sg",
              "TerraformModule": "terraform-aws-wandb/module/app_eks",
              "TerraformNamespace": "wnb-tf",
              "kubernetes.io/cluster/wnb-tf": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1124877725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-020b8e2564196924f",
            "security_group_rule_id": "sgr-0c0b233c78182783e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2532450331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020b8e2564196924f",
            "security_group_rule_id": "sgr-02dc8162459267191",
            "self": false,
            "source_security_group_id": "sg-04b8fb04beeac7ae4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2739223459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b8fb04beeac7ae4",
            "security_group_rule_id": "sgr-010aa71a1dfa109b2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4125846843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b8fb04beeac7ae4",
            "security_group_rule_id": "sgr-036e3ec65bf5c4856",
            "self": false,
            "source_security_group_id": "sg-020b8e2564196924f",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4118924153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b8fb04beeac7ae4",
            "security_group_rule_id": "sgr-063835340d4b82ee0",
            "self": false,
            "source_security_group_id": "sg-020b8e2564196924f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.cluster",
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-51442056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b8fb04beeac7ae4",
            "security_group_rule_id": "sgr-074485ef126d1e897",
            "self": false,
            "source_security_group_id": "sg-04b8fb04beeac7ae4",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.app_eks.module.eks.aws_security_group.workers",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:loadbalancer/app/wnb-tf-alb/fcf4fdebaf4b9959",
            "arn_suffix": "app/wnb-tf-alb/fcf4fdebaf4b9959",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wnb-tf-alb-1018355049.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600843687:loadbalancer/app/wnb-tf-alb/fcf4fdebaf4b9959",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wnb-tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02cad8a07776a00a0",
              "sg-0bc7bb590407faacd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d442d0315350e06"
              },
              {
                "subnet_id": "subnet-0b13a55e8a9768d83"
              }
            ],
            "subnets": [
              "subnet-05d442d0315350e06",
              "subnet-0b13a55e8a9768d83"
            ],
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "vpc_id": "vpc-054f2a122628623a2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.app_lb.aws_security_group.outbound",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:listener/app/wnb-tf-alb/fcf4fdebaf4b9959/c1d095b606b32144",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600843687:listener/app/wnb-tf-alb/fcf4fdebaf4b9959/c1d095b606b32144",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:loadbalancer/app/wnb-tf-alb/fcf4fdebaf4b9959",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.acm.aws_acm_certificate.this",
            "module.wandb_infra.module.acm.aws_acm_certificate_validation.this",
            "module.wandb_infra.module.acm.aws_route53_record.validation",
            "module.wandb_infra.module.app_lb.aws_lb.alb",
            "module.wandb_infra.module.app_lb.aws_lb_target_group.app",
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.app_lb.aws_security_group.outbound",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:listener/app/wnb-tf-alb/fcf4fdebaf4b9959/a2de7c4b3256a1ea",
            "certificate_arn": "arn:aws:acm:us-east-1:571600843687:certificate/756514d5-9c2a-435a-99de-b3c354ae003c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:targetgroup/wnb-tf-tg-app/dbe6bcb05b8c690c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600843687:listener/app/wnb-tf-alb/fcf4fdebaf4b9959/a2de7c4b3256a1ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:loadbalancer/app/wnb-tf-alb/fcf4fdebaf4b9959",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2020-10",
            "tags": null,
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.acm.aws_acm_certificate.this",
            "module.wandb_infra.module.acm.aws_acm_certificate_validation.this",
            "module.wandb_infra.module.acm.aws_route53_record.validation",
            "module.wandb_infra.module.app_lb.aws_lb.alb",
            "module.wandb_infra.module.app_lb.aws_lb_target_group.app",
            "module.wandb_infra.module.app_lb.aws_security_group.inbound",
            "module.wandb_infra.module.app_lb.aws_security_group.outbound",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600843687:targetgroup/wnb-tf-tg-app/dbe6bcb05b8c690c",
            "arn_suffix": "targetgroup/wnb-tf-tg-app/dbe6bcb05b8c690c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600843687:targetgroup/wnb-tf-tg-app/dbe6bcb05b8c690c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wnb-tf-tg-app",
            "port": 32543,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-0bc7bb590407faacd",
            "description": "Allow http(s) traffic to wandb",
            "egress": [],
            "id": "sg-0bc7bb590407faacd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP (port 80) traffic inbound to W\u0026B LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS (port 443) traffic inbound to W\u0026B LB",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wnb-tf-alb-inbound",
            "name_prefix": "",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.app_lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-02cad8a07776a00a0",
            "description": "Allow all traffic outbound from W\u0026B",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cad8a07776a00a0",
            "ingress": [],
            "name": "wnb-tf-alb-outbound",
            "name_prefix": "",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.database.module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-09cf4c02a41879792",
            "description": "Control traffic to/from RDS Aurora wnb-tf",
            "egress": [],
            "id": "sg-09cf4c02a41879792",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.10.0/24",
                  "10.10.11.0/24"
                ],
                "description": "From allowed CIDRs",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from EKS workers to database",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f135f7cc62eec2ce"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wnb-tf-20250131024207823600000013",
            "name_prefix": "wnb-tf-",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wnb-tf",
              "Namespace": "wnb-tf"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf",
              "Namespace": "wnb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.database.module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.10.0/24",
              "10.10.11.0/24"
            ],
            "description": "From allowed CIDRs",
            "from_port": 3306,
            "id": "sgrule-4240941045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cf4c02a41879792",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.database.module.aurora.aws_security_group.this",
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:network-acl/acl-02bfa97b51a12d260",
            "default_network_acl_id": "acl-02bfa97b51a12d260",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02bfa97b51a12d260",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "571600843687",
            "subnet_ids": [
              "subnet-02aed7565796c4208",
              "subnet-05024a9be99979c8c",
              "subnet-05d442d0315350e06",
              "subnet-094b8337bd7d97d05",
              "subnet-09c1f15d5c1a2ce11",
              "subnet-0b13a55e8a9768d83",
              "subnet-0ee1405a13661a6ac",
              "subnet-0fe7c88ba77ec5d34"
            ],
            "tags": {
              "Name": "wnb-tf-vpc-default"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-default"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:route-table/rtb-046d92dd72dc515d2",
            "default_route_table_id": "rtb-046d92dd72dc515d2",
            "id": "rtb-046d92dd72dc515d2",
            "owner_id": "571600843687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wnb-tf-vpc-default"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-0993adef8e7663996",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0993adef8e7663996",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wnb-tf-vpc-default"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-default"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a56accce68a6fbcf",
            "association_id": "eipassoc-0affc18cb89650b25",
            "domain": "vpc",
            "id": "eipalloc-0a56accce68a6fbcf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d0bd48d92a44d84",
            "private_dns": "ip-10-10-0-214.ec2.internal",
            "private_ip": "10.10.0.214",
            "public_dns": "ec2-54-165-205-62.compute-1.amazonaws.com",
            "public_ip": "54.165.205.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wnb-tf-vpc-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cac78cea18434ead",
            "association_id": "eipassoc-0b28f0165a1e02342",
            "domain": "vpc",
            "id": "eipalloc-0cac78cea18434ead",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06efe67c12b8d27bb",
            "private_dns": "ip-10-10-1-71.ec2.internal",
            "private_ip": "10.10.1.71",
            "public_dns": "ec2-100-29-119-206.compute-1.amazonaws.com",
            "public_ip": "100.29.119.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wnb-tf-vpc-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:internet-gateway/igw-028f185130fab1f29",
            "id": "igw-028f185130fab1f29",
            "owner_id": "571600843687",
            "tags": {
              "Name": "wnb-tf-vpc"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a56accce68a6fbcf",
            "association_id": "eipassoc-0affc18cb89650b25",
            "connectivity_type": "public",
            "id": "nat-084a18a85e54b0fcd",
            "network_interface_id": "eni-08d0bd48d92a44d84",
            "private_ip": "10.10.0.214",
            "public_ip": "54.165.205.62",
            "subnet_id": "subnet-05d442d0315350e06",
            "tags": {
              "Name": "wnb-tf-vpc-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cac78cea18434ead",
            "association_id": "eipassoc-0b28f0165a1e02342",
            "connectivity_type": "public",
            "id": "nat-0bf63d89deed4f454",
            "network_interface_id": "eni-06efe67c12b8d27bb",
            "private_ip": "10.10.1.71",
            "public_ip": "100.29.119.206",
            "subnet_id": "subnet-0b13a55e8a9768d83",
            "tags": {
              "Name": "wnb-tf-vpc-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e186bdcd9aa381a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-084a18a85e54b0fcd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e186bdcd9aa381a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_nat_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-014ead80ec3befbac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf63d89deed4f454",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014ead80ec3befbac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_eip.nat",
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_nat_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028f185130fab1f29",
            "id": "r-rtb-046281c71f206e4301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046281c71f206e430",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_internet_gateway.this",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:route-table/rtb-07e186bdcd9aa381a",
            "id": "rtb-07e186bdcd9aa381a",
            "owner_id": "571600843687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084a18a85e54b0fcd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wnb-tf-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:route-table/rtb-014ead80ec3befbac",
            "id": "rtb-014ead80ec3befbac",
            "owner_id": "571600843687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf63d89deed4f454",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wnb-tf-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:route-table/rtb-046281c71f206e430",
            "id": "rtb-046281c71f206e430",
            "owner_id": "571600843687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028f185130fab1f29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wnb-tf-vpc-public"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0617b0f62ca0dd807",
            "route_table_id": "rtb-07e186bdcd9aa381a",
            "subnet_id": "subnet-02aed7565796c4208"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.database",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a77328941cd6099",
            "route_table_id": "rtb-014ead80ec3befbac",
            "subnet_id": "subnet-094b8337bd7d97d05"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.database",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.database",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d2885b1e245855",
            "route_table_id": "rtb-07e186bdcd9aa381a",
            "subnet_id": "subnet-09c1f15d5c1a2ce11"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c851ff510198a6ba",
            "route_table_id": "rtb-014ead80ec3befbac",
            "subnet_id": "subnet-0ee1405a13661a6ac"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0224b03ba333eb2a1",
            "route_table_id": "rtb-07e186bdcd9aa381a",
            "subnet_id": "subnet-0fe7c88ba77ec5d34"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447bffb4e7392330",
            "route_table_id": "rtb-014ead80ec3befbac",
            "subnet_id": "subnet-05024a9be99979c8c"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.private",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.private",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c0b6a3a3901354",
            "route_table_id": "rtb-046281c71f206e430",
            "subnet_id": "subnet-05d442d0315350e06"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af8f44457bd0096e",
            "route_table_id": "rtb-046281c71f206e430",
            "subnet_id": "subnet-0b13a55e8a9768d83"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_route_table.public",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.public",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-02aed7565796c4208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aed7565796c4208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-094b8337bd7d97d05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094b8337bd7d97d05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-09c1f15d5c1a2ce11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c1f15d5c1a2ce11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-elasticache-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-elasticache-us-east-1a"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-0ee1405a13661a6ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee1405a13661a6ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-elasticache-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-elasticache-us-east-1b"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-0fe7c88ba77ec5d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe7c88ba77ec5d34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-05024a9be99979c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05024a9be99979c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-05d442d0315350e06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d442d0315350e06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:subnet/subnet-0b13a55e8a9768d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b13a55e8a9768d83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600843687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wnb-tf-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:vpc/vpc-054f2a122628623a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02bfa97b51a12d260",
            "default_route_table_id": "rtb-046d92dd72dc515d2",
            "default_security_group_id": "sg-0993adef8e7663996",
            "dhcp_options_id": "dopt-013e7df25918f89bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054f2a122628623a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046d92dd72dc515d2",
            "owner_id": "571600843687",
            "tags": {
              "Name": "wnb-tf-vpc"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb",
              "Name": "wnb-tf-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.redis[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600843687:security-group/sg-0a52288cc5a749f4f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.30.0/24",
                  "10.10.31.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0a52288cc5a749f4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.30.0/24",
                  "10.10.31.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from EKS workers to elasticache",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f135f7cc62eec2ce"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "wnb-tf-elasticache-security-group",
            "name_prefix": "",
            "owner_id": "571600843687",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Enviroment": "dev",
              "Example": "PublicDnsExternal",
              "GithubOrg": "wandb",
              "GithubRepo": "terraform-aws-wandb"
            },
            "timeouts": null,
            "vpc_id": "vpc-054f2a122628623a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.redis[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.30.0/24",
              "10.10.31.0/24"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-3341008902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a52288cc5a749f4f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wandb_infra.module.redis.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.wandb_infra.module.redis[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.30.0/24",
              "10.10.31.0/24"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-1526233406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a52288cc5a749f4f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wandb_infra.module.networking.data.aws_availability_zones.available",
            "module.wandb_infra.module.networking.module.vpc.aws_subnet.elasticache",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc.this",
            "module.wandb_infra.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wandb_infra.module.redis.aws_security_group.redis"
          ]
        }
      ]
    }
  ]
}